[project]
name = "vimiv"
version = "0.9.0"
authors = [
    {name = "Christian Karl", email = "karlch@protonmail.com"},
]
description = "An image viewer with vim-like keybindings."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pyqt", "image viewer", "vim"]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Viewers"
]
dependencies = [
    "PyQt6>=6.9.0"
]

[project.gui-scripts]
vimiv = "vimiv.startup:main"

[project.urls]
"Source Code" = "https://github.com/karlch/vimiv-qt"
"Bug Tracker" = "https://github.com/karlch/vimiv-qt/issues"
Documentation = "https://karlch.github.io/vimiv-qt/documentation"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
ext-modules = [
    {name = "vimiv.imutils._c_manipulate", sources = ["c-extension/manipulate.c"]}
]


[tool.setuptools.packages]
find = {}
